незначительные доработки