@@ -5,6 +5,7 @@ import org.example.cinemahome.port.SeasonPort;
 import org.example.cinemahome.repository.SeasonRepository;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Component;
+import java.util.stream.Collectors;
 
 import java.util.List;
 
@@ -18,6 +19,6 @@ public class DbSeasonAdapter implements SeasonPort {
     public List<Season> findBySeriesId(Long seriesId) {
         return seasonRepository.findAll().stream()
                 .filter(s -> s.getSeries() != null && seriesId.equals(s.getSeries().getId()))
-                .toList();
+                .collect(Collectors.toList()); // ←Mutable список
     }
 }
